--- a/doc/smp_conf_phy_event.8
+++ b/doc/smp_conf_phy_event.8
@@ -29,7 +29,7 @@ options, or within a \fIFILE\fR given to the \fI\-\-file\fR option.
 .PP
 Once a phy event source has been configured by this function, its counters
 should be readable with the REPORT PHY EVENT or REPORT PHY EVENT LIST
-functions. Peak value detector thresholds should only be non-zero for phy
+functions. Peak value detector thresholds should only be non\-zero for phy
 event sources whose type is "peak value detector". If the threshold value
 is exceeded the expander will originate a Broadcast(Expander).
 .SH OPTIONS
