--- a/doc/smp_conf_route_info.8
+++ b/doc/smp_conf_route_info.8
@@ -18,11 +18,11 @@ The mpt interface uses \fISMP_DEVICE\fR
 to identify a HBA (an SMP initiator) and needs the additional \fI,N\fR to
 differentiate between HBAs if there are multiple present.
 .PP
-There are two expander route table types: phy-based and expander-based.
-The expander-based route table was introduced in SAS\-2 and supersedes the
-phy-based route tables. The CONFIGURE ROUTE INFORMATION function is
-associated with a phy-based route table. The REPORT ROUTE INFORMATION
-function is provided to report phy-based route table entries.
+There are two expander route table types: phy\-based and expander\-based.
+The expander\-based route table was introduced in SAS\-2 and supersedes the
+phy\-based route tables. The CONFIGURE ROUTE INFORMATION function is
+associated with a phy\-based route table. The REPORT ROUTE INFORMATION
+function is provided to report phy\-based route table entries.
 .PP
 Each phy in a SAS expander that has an associated routing attribute
 of "table" has a router table. The number of rows (or entries) in
