--- a/trunk/doc/smp_conf_zone_man_pass.8
+++ b/trunk/doc/smp_conf_zone_man_pass.8
@@ -36,7 +36,7 @@ either single quotes are double quotes. Alternatively the password may be
 given in ASCII hexadecimal; either as bytes separated by space, tab, comma or
 newline, or as longer strings of hexadecimal bytes in which every 2 digits
 represents a byte. Empty lines and those starting with "#" are ignored.
-A line starting with '-1' causes all remaining bytes in the password
+A line starting with '\-1' causes all remaining bytes in the password
 to be filled with 0xff.
 .TP
 \fB\-h\fR, \fB\-\-help\fR
