--- a/trunk/doc/smp_discover.8
+++ b/trunk/doc/smp_discover.8
@@ -68,7 +68,7 @@ first, then phy 1, continuing until an error occurs. The starting phy
 and the number of phys "discovered" can be controlled by \fI\-\-phy=ID\fR
 and \fI\-\-num=NUM\fR. If \fI\-\-brief\fR is given then there is no output
 for phys that indicate there is no attached device. When this option is
-used twice then multi-line output is produced for each phy. See the
+used twice then multi\-line output is produced for each phy. See the
 section below on SINGLE LINE PER PHY FORMAT.
 .TP
 \fB\-M\fR, \fB\-\-my\fR
@@ -167,8 +167,8 @@ then the phy's zone group is shown (e.g. "ZG:2").
 If the \fI\-\-adn\fR option is given then after the attached SAS address
 and the attached device's phy identifier are output an extra field is
 inserted containing the "attached device name" field. For a SAS disk this
-should be its target device name (in NAA-5 format) and for a SATA disk its
-WWN (if provided, also in NAA-5 format). Also when the \fI\-\-adn\fR option
+should be its target device name (in NAA\-5 format) and for a SATA disk its
+WWN (if provided, also in NAA\-5 format). Also when the \fI\-\-adn\fR option
 is given the phy speed and zone group are not output in order to keep the
 line length reasonable.
 .SH NOTES
