--- a/trunk/doc/smp_discover_list.8
+++ b/trunk/doc/smp_discover_list.8
@@ -173,8 +173,8 @@ then the phy's zone group is shown (e.g. "ZG:2").
 If the \fI\-\-adn\fR option is given then after the attached SAS address
 and the attached device's phy identifier are output an extra field is 
 inserted containing the "attached device name" field. For a SAS disk this
-should be its target device name (in NAA-5 format) and for a SATA disk its
-WWN (if provided, also in NAA-5 format). Also when the \fI\-\-adn\fR option
+should be its target device name (in NAA\-5 format) and for a SATA disk its
+WWN (if provided, also in NAA\-5 format). Also when the \fI\-\-adn\fR option
 is given the phy speed and zone group are not output in order to keep the
 line length reasonable.
 .SH NOTES
