--- a/trunk/doc/smp_rep_phy_event_list.8
+++ b/trunk/doc/smp_rep_phy_event_list.8
@@ -61,7 +61,7 @@ For example: "phy_id=3: [0x1]: Invalid word count: 29"; without this option
 this line would be: "3: Invalid word count: 29".
 .TP
 \fB\-n\fR, \fB\-\-nonz\fR
-only show phy events with non-zero counts or peak values. The default is to
+only show phy events with non\-zero counts or peak values. The default is to
 show all phy events in the response.
 .TP
 \fB\-I\fR, \fB\-\-interface\fR=\fIPARAMS\fR
@@ -92,7 +92,7 @@ the sg_logs utility.
 .PP
 Similar information may be obtained for SAS initiator phys (e.g. on a SAS
 HBA). As an example in Linux 2.6.28 error information can be found in this
-directory /sys/class/sas_phy/phy-4:0 (for the phy 0 in SCSI/SAS host 4).
+directory /sys/class/sas_phy/phy\-4:0 (for the phy 0 in SCSI/SAS host 4).
 .PP
 Similar information may be obtained for SATA device phys (e.g. on a SATA
 disk). If there is a SAT layer between OS and the SATA device then the
