--- a/doc/smp_utils.8
+++ b/doc/smp_utils.8
@@ -1,4 +1,4 @@
-.TH SMP_UTILS "8" "January 2012" "smp_utils\-0.98" SMP_UTILS
+.TH SMP_UTILS "8" "March 2013" "smp_utils\-0.98" SMP_UTILS
 .SH NAME
 smp_* \- invoke a SAS Serial Management Protocol (SMP) function
 .SH SYNOPSIS
@@ -60,12 +60,12 @@ to specify the SAS address of the SMP target.
 \fBsgv4\fR (\fBsg\fR)
 This interface is more generic and supported by several SAS HBA drivers
 including mptsas (and mpt2sas). It was introduced in the linux 2.6.24
-kernel. The SMP functions are passed to the kernel using a format known
-as "SCSI Generic Version 4" which gives this interface its name: "sgv4"
-or just "sg". The SAS transport layer within the SCSI sub\-system unpacks
-the SMP requests and forwards them to SAS low level drivers that support
-this interface. The \fISMP_DEVICE\fR is either a member of
-the '/sys/class/bsg' directory (e.g. /sys/class/bsg/expander\-6:0 ) or a
+kernel. The SMP functions are passed to the kernel via the bsg driver using
+a format known as "SCSI Generic Version 4" which gives this interface its
+name: "sgv4" or just "sg". The SAS transport layer within the SCSI
+sub\-system unpacks the SMP requests and forwards them to SAS low level
+drivers that support this interface. The \fISMP_DEVICE\fR is either a member
+of the '/sys/class/bsg' directory (e.g. /sys/class/bsg/expander\-6:0 ) or a
 device node made for the bsg driver (e.g. /dev/bsg/expander\-6:0 ). Such
 device nodes are dynamic (i.e. they don't have fixed major and minor
 numbers) and should correspond to the major and minor numbers found in
@@ -76,7 +76,7 @@ and return the corresponding responses. However CAM does not directly
 access expander devices because they are not SCSI devices. It makes the
 assumption that each SAS expander has an integrated SES (enclosure) device
 and that is addressed. This assumption seems to be true for SAS\-2 expanders
-but not some SAS\-1 expanders. Thus invocations look like this: 
+but not some SAS\-1 expanders. Thus invocations look like this:
 .PP
   # smp_discover /dev/ses0
 .PP
@@ -96,8 +96,8 @@ environment variable is checked and if present its contents are used as the
 SAS address. SAS addresses are usually given in hex indicated by a
 leading '0x' or trailing 'h'.
 .PP
-In both cases command line options override the corresponding environment
-variable.
+If either or both environment variables and the coresponding command line
+options are given, then the command line options take precedence.
 .SH COMMON OPTIONS
 Mandatory arguments to long options are mandatory for short options as well.
 If an option takes a numeric argument then that argument is assumed to
@@ -221,7 +221,7 @@ An enclosure
 .B universal
 port is one in which the "table to table supported" attribute is set (in
 the REPORT GENERAL response) and the associated phys have the table routing
-attribute (in the DISCOVER response). Enclosure 
+attribute (in the DISCOVER response). Enclosure
 .B universal
 ports were introduced in SAS\-2 and have few restrictions when used to
 interconnect expanders or connect end devices. An enclosure
@@ -241,17 +241,20 @@ port.
 See "Examples" section in http://sg.danny.cz/sg/smp_utils.html .
 .SH CONFORMING TO
 SAS has multiple generations. The first three generations are approved
-standards: the original SAS (ANSI INCITS 376\-2003), SAS 1.1 (INCITS 417\-2006)
-and SAS\-2 (ANSI INCITS 457\-2010) . SAS\-2.1 technical work is ongoing and
-it has been split into two documents, the one of interest is called the SAS
-Protocol Layer (SPL) and  at the time of writing the most recent draft is
-spl\-r07.pdf (see section 9.4.3 for SMP functions). Technical work on SAS\-3
-has started with the SMP functions defined in the SPL\-2
-document (spl2r03.pdf). To avoid confusion, the multiple generations of SAS
-will be referred to in these man pages as SAS 1, 1.1, 2, 2.1 and 3 . Drafts,
-including those just prior to standardization can be found at the
-http://www.t10.org site. INCITS policy now requires a registration to view
-these drafts, a break from t10.org tradition.
+standards: the original SAS (ANSI INCITS 376\-2003), SAS 1.1 (INCITS
+417\-2006) and SAS\-2 (ANSI INCITS 457\-2010) . SAS\-2.1 technical work is
+complete and it has been split into two documents, the one of interest is
+called the SAS Protocol Layer (SPL ANSI INCITS 476\-2011). The draft just
+prior to that standard is spl\-r07.pdf (see section 9.4.3 for SMP functions).
+Technical work on SAS\-2 is almost complete with the SMP functions defined
+in spl2r04c.pdf section 9.4.3. Work has commenced on SPL\-3 and the most
+recent draft is spl3r02.pdf. To avoid confusion, the multiple generations of
+SAS will be referred to in these man pages as SAS 1, 1.1, 2, 2.1 (SPL) and
+3 (SPL\-2 and SPL\-3). Roughly speaking SAS\-1 runs at 3 Gbps, SAS\-2 at 6
+Gbps and SAS\-3 at 12 Gbps. Drafts, including those just prior to
+standardization can be found at the http://www.t10.org site. INCITS policy
+now requires a registration to view these drafts, a break from t10.org
+tradition.
 .PP
 The two utilities for reading and writing to GPIO registers, smp_read_gpio
 and smp_write_gpio, are defined in the Small Form Factor document SFF\-8485
@@ -274,7 +277,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2012 Douglas Gilbert
+Copyright \(co 2006\-2013 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
