make code more C11/C++ friendly

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages.
 
-Changelog for smp_utils-0.98 [20130508] [svn:r129]
+Changelog for smp_utils-0.98 [20130604] [svn:r130]
   - smp_discover, smp_discover_list: in 1 line summary use
     "U" instead of "T" (routing attribute) if "table to
     table supported" set in report general response
@@ -14,6 +14,7 @@ Changelog for smp_utils-0.98 [20130508] [svn:r129]
   - change binary install from /usr/sbin to /usr/bin since
     sbin caused problems
   - examples folder script cleanup
+  - make code more C11/C++ friendly
 
 Changelog for smp_utils-0.97 [20120120] [svn:r116]
   - smp_conf_phy_event: new utility
