--- a/doc/smp_utils.8
+++ b/doc/smp_utils.8
@@ -1,4 +1,4 @@
-.TH SMP_UTILS "8" "April 2014" "smp_utils\-0.98" SMP_UTILS
+.TH SMP_UTILS "8" "May 2014" "smp_utils\-0.98" SMP_UTILS
 .SH NAME
 smp_* \- invoke a SAS Serial Management Protocol (SMP) function
 .SH SYNOPSIS
@@ -41,13 +41,29 @@ Another method is to have a \fISMP_DEVICE\fR which represents the SMP target.
 In this case no \fISAS_ADDRESS\fR needs to be given (since it is implicit).
 .PP
 Each utility in smp_utils attempts to work out which interface it has been
-given by examining the \fISMP_DEVICE\fR file. There are two interfaces
+given by examining the \fISMP_DEVICE\fR file. There are three interfaces
 supported currently:
+.TP
+\fBaac\fR
+This specifies the aacraid SAS pass\-through associated with Adaptec/PMC
+RAID products. The \fISMP_DEVICE[,N]\fR argument takes the form
+\fI/dev/aac[N[,E_ID]]\fR where "N" is the raid controller number (typically
+0) and "E_ID" is the expander identifier (typically 0); both default to 0
+so \fI/dev/aac\fR is equivalent to \fI/dev/aac0\fR and \fI/dev/aac0,0\fR .
+The "N" is the unique_id found in /sys/class/scsi_host<HN>/unique_id .
+The "HN" is the host number which is the first number to appear on each
+line in the lsscsi utility which by default uses one line to list each
+accessible SCSI device (typically SCSI or ATA disks). The "E_ID" is the
+expander identifier which can be found with the Adaptec/PMC arcconf utility
+using the form "arcconf expanderlist <ControllerNum>". The <ControllerNum>s
+start at 1 . If an aac RAID controller is present then the /dev/acc device
+node will be created by the first smp utility to use this interface.
 .TP
 \fBmpt\fR
 This specifies the MPT fusion SAS pass\-through. The mptsas driver uses
 the '/dev/mptctl' device node (character device major 10, minor 220) while
 the mpt2sas driver uses '/dev/mpt2ctl' device node (major 10, minor 221).
+For the mpt3sas driver the corresponding device node is '/dev/mpt3ctl'.
 The 'modprobe mptctl' or 'modprobe mpt2ctl' command may be needed. If there
 are multiple mpt fusion controllers (HBAs) in the computer, then the user
 will need to specify which one to use with the syntax: '/dev/mptctl,<n>'
@@ -282,4 +298,4 @@ Copyright \(co 2006\-2014 Douglas Gilbert
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .SH "SEE ALSO"
-.B sg_logs, sg_vpd, sg_ses(sg3_utils); sdparm(sdparm)
+.B sg_logs, sg_vpd, sg_ses(sg3_utils); sdparm(sdparm); lsscsi(lsscsi)
