--- a/doc/smp_discover.8
+++ b/doc/smp_discover.8
@@ -1,14 +1,14 @@
-.TH SMP_DISCOVER "8" "April 2014" "smp_utils\-0.98" SMP_UTILS
+.TH SMP_DISCOVER "8" "September 2014" "smp_utils\-0.99" SMP_UTILS
 .SH NAME
 smp_discover \- invoke DISCOVER SMP function
 .SH SYNOPSIS
 .B smp_discover
-[\fI\-\-adn\fR] [\fI\-\-brief\fR] [\fI\-\-cap\fR] [\fI\-\-help\fR]
-[\fI\-\-hex\fR] [\fI\-\-ignore\fR] [\fI\-\-interface=PARAMS\fR]
-[\fI\-\-list\fR] [\fI\-\-multiple\fR] [\fI\-\-my\fR] [\fI\-\-num=NUM\fR]
-[\fI\-\-phy=ID\fR] [\fI\-\-raw\fR] [\fI\-\-sa=SAS_ADDR\fR]
-[\fI\-\-summary\fR] [\fI\-\-verbose\fR] [\fI\-\-version\fR] [\fI\-\-zero\fR]
-\fISMP_DEVICE[,N]\fR
+[\fI\-\-adn\fR] [\fI\-\-brief\fR] [\fI\-\-cap\fR] [\fI\-\-dsn\fR]
+[\fI\-\-help\fR] [\fI\-\-hex\fR] [\fI\-\-ignore\fR]
+[\fI\-\-interface=PARAMS\fR] [\fI\-\-list\fR] [\fI\-\-multiple\fR]
+[\fI\-\-my\fR] [\fI\-\-num=NUM\fR] [\fI\-\-phy=ID\fR] [\fI\-\-raw\fR]
+[\fI\-\-sa=SAS_ADDR\fR] [\fI\-\-summary\fR] [\fI\-\-verbose\fR]
+[\fI\-\-version\fR] [\fI\-\-zero\fR] \fISMP_DEVICE[,N]\fR
 .SH DESCRIPTION
 .\" Add any additional description here
 .PP
@@ -53,6 +53,14 @@ expanded (e.g. instead of "G4:" it prints "G4 (12 Gbps):").
 .TP
 \fB\-h\fR, \fB\-\-help\fR
 output the usage message then exit.
+.TP
+\fB\-D\fR, \fB\-\-dsn\fR
+outputs the device slot number at the end of each summary line. In summary
+mode one line is output per expander phy. It is output in the
+form "dsn=<val>" where <val> is decimal in the range from 0 to 254 inclusive.
+It is not output if it is not available or has the value 255. An expander
+typically contains a SES device which yields device slot numbers in its
+Additional Element Status diagnostic page.
 .TP
 \fB\-H\fR, \fB\-\-hex\fR
 output the response (less the CRC field) in hexadecimal.
