--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
 smp-utils (0.99-0.1) unstable; urgency=low
 
-  * xxxxx
+  * add --dsn option to smp_discover[_list]
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Wed, 28 May 2014 17:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Sun, 21 Sep 2014 23:00:00 -0400
 
 smp-utils (0.98-0.1) unstable; urgency=low
 
